# QtSockets

./: .gitignore  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  ClientUI.cpp  ClientUI.h  Message.cpp  Message.h  main.cpp
Client/UI/: Chat.qml  ChatBox.qml  SendButton.qml  main.qml
Server/: ArchiveManager.cpp  ArchiveManager.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  ServerMessengerProvider.cpp  ServerMessengerProvider.h  main.cpp
Server/Archive/: Dominik.txt
